--- a/src/Shared/layout/layout.scss
+++ b/src/Shared/layout/layout.scss
@@ -1,6 +1,6 @@
 .content-app {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto minmax(72vh, 1fr) auto;
   background-color: #d2d2d2;
   main {
     min-height: 400px;
